Only vertical resizing of <textarea>

--- a/src/reset.css
+++ b/src/reset.css
@@ -76,3 +76,8 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+/* Only vertical resizing of <textarea> */
+textarea {
+  resize: vertical;
+}
