--- a/src/reset.css
+++ b/src/reset.css
@@ -1,8 +1,9 @@
 /* Box sizing rules */
-*,
-*::before,
-*::after {
+html {
   box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 /* Remove default margin */
