--- a/src/reset.css
+++ b/src/reset.css
@@ -55,12 +55,13 @@ button,
 textarea,
 select {
   font: inherit;
+  margin: revert;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-   scroll-behavior: auto;
+    scroll-behavior: auto;
   }
   *,
   *::before,
